Bug 155041 - A11Y sidebar: No warning about missing form control description
Summary: A11Y sidebar: No warning about missing form control description
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-04-27 08:38 UTC by Gabor Kelemen (Collabora)
Modified: 2023-06-22 15:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The example file with the accessibility sidebar (110.27 KB, image/png)
2023-04-27 08:38 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-27 08:38:49 UTC
Created attachment 186954 [details]
The example file with the accessibility sidebar

Form controls can have accessible descriptions (Form - Design mode, then: Format - Description) but the accessibility check sidebar does not warn about them missing.

1. Open attachment 186626 [details] from bug 154777
2. Open the Accessibility sidebar.
-> Only the first two form controls have accessible descriptions, so it should warn about all the rest not having any.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 stragu 2023-04-27 12:19:22 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 52acefd6024ec79f8333ba40eef83816eda3046f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2023-06-12 18:39:07 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c5cde93cd4327f55fdd23e6230c2cb101192374d

tdf#155041 - A11Y sidebar: fix warning about missing form control description

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-13 21:20:05 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b22b71879b7570cc1b9b550b9a95af2ff91e2777

tdf#155041 - A11Y sidebar: fix warning about missing form control description

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 stragu 2023-06-22 15:20:34 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 66da786bdd4588b31755058acf46034c2056215c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you!